--- a/css/main.css
+++ b/css/main.css
@@ -1,56 +1,205 @@
-*{
+* {
 	box-sizing: border-box;
+
+	margin: 0px;
+	padding: 0px;
 }
 
-.text_red {
-	color: red;
+body {
+	font-family: 'Open Sans', sans-serif;
+	font-weight: 400;
+	font-size: 16px;
+	/*    
+	font-family: 'Montserrat', sans-serif;
+    font-family: 'Open Sans', sans-serif;
+    font-family: 'Ubuntu', sans-serif; 
+    */
+}
+
+/* Containers */
+
+.header {
+	background: rgb(78,190,254);
+	background: -moz-linear-gradient(121deg, rgba(78,190,254,1) 0%, rgba(55,143,217,1) 100%);
+	background: -webkit-linear-gradient(121deg, rgba(78,190,254,1) 0%, rgba(55,143,217,1) 100%);
+	background: linear-gradient(121deg, rgba(78,190,254,1) 0%, rgba(55,143,217,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#4ebefe",endColorstr="#378fd9",GradientType=1);
+
+	padding-top: 62px;
+	padding-bottom: 150px;
+}
+
+.container {
+	max-width: 1200px;
+
+	margin: 0 auto;
+	padding: 0 15px;
+}
+
+.section {
+	padding-top: 110px;
+}
+
+.section_section-ahead {
+	padding-bottom: 125px;
+
+	color: #201b2d;
+}
+
+.section_section-form {
+	background-color: #ecf3f8;
+
+	padding-bottom: 100px;
+}
+
+.footer {
+	background-color: #164d7a;
+}
+
+/* Buttons */
+
+.btn {
+	display: inline-block;
+	padding: 22px 25px;
+
+	background-color: #ffd429;
+
+	text-decoration: none;
+
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 900;
+	font-size: 15px;
+	color: #2e2a1b;
+
+	letter-spacing: 0.06em;
+
+	transition: background-color 0.3s linear;
+
+	text-align: center;
+}
+
+.btn:hover {
+	background-color: #eabf12;
 }
 
 /* Header */
 
-.header__text-1 {
-	max-width: 100px;
+.header__content-wrap {
+	display: flex;
 
-	background-color: blue;
+	justify-content: space-between;
+}
+
+.header__content-text {
+	margin-top: 145px;
 
 	color: #fff;
 }
 
-.header__text-2 {
-	margin-top: 100px;
+.header__title {
+	width: 565px;
+
+	font-family: 'Ubuntu', sans-serif;
+	font-weight: 700;
+	font-size: 37px;
+
+	line-height: 1.4em;
 }
 
-/* Section 1 */
-
-.section__title-h2 {
-	padding: 5px 5px;
-
-	background-color: green;
-
-	color: #fff;
+.text_big {
+	font-size: 59px;
 }
 
-/* Section 2 */
+.header__text {
+	width: 450px;
 
-.section__title-h2_big {
-	padding: 40px 35px;
+	margin: 40px 0;
 }
 
-.section__item {
-	max-width: 35%;
+.header__img {
+	margin-top: 60px;
+	margin-left: 90px;
 }
 
-.item__title {
+/* Section-ahead */
+
+.section__title {
+	margin-bottom: 74px;	
+
+	font-family: 'Ubuntu', sans-serif;
+	font-weight: 700;
+	font-size: 30px;
+
+	color: #201b2d;
+
 	text-align: center;
 }
 
-.section__list li{
-	border: 1px solid #000;
-	border-bottom: 0;
-
-	font-size: 30px;
+.section__row {
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
 }
 
-.section__list li:last-child {
-	border-bottom: 1px solid #000;
+.row__item {
+	width: 300px;
+
+	font-family: 'Ubuntu', sans-serif;
+
+	text-align: center;
+
+	letter-spacing: 0.01em;
+}
+
+.item__title {
+	margin-top: 30px;
+	margin-bottom: 25px;
+
+	font-weight: 700;
+	font-size: 19px;
+}
+
+.item__text {
+	font-weight: 400;
+	font-size: 15px;
+}
+
+/* Section-form */
+
+.section-form__form {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+
+	margin: 0 auto;
+
+	width: 340px;
+}
+
+.form__input {
+	padding-left: 23px;
+	height: 58px;
+	margin-bottom: 15px;
+
+	border: 1px solid #bbb;
+	border-radius: 3px;
+
+	font-family: 'Ubuntu', serif;
+	font-size: 15px;
+}
+
+.btn_form-btn {
+	border: 0;
+
+	cursor: pointer;
+}
+
+/* Footer */
+
+.right {
+	padding: 63px 0;
+	font-size: 14px;
+	color: #fff;
+
+	text-align: center;
 }
