--- a/css/main.css
+++ b/css/main.css
@@ -30,10 +30,9 @@ body {
 }
 
 .container {
-	max-width: 1200px;
+	max-width: 1170px;
 
 	margin: 0 auto;
-	padding: 0 15px;
 }
 
 .section {
@@ -88,11 +87,11 @@ body {
 	display: flex;
 
 	justify-content: space-between;
+
+	align-items: center;
 }
 
 .header__content-text {
-	margin-top: 145px;
-
 	color: #fff;
 }
 
@@ -113,12 +112,7 @@ body {
 .header__text {
 	width: 450px;
 
-	margin: 40px 0;
-}
-
-.header__img {
-	margin-top: 60px;
-	margin-left: 90px;
+	padding: 40px 0;
 }
 
 /* Section-ahead */
