--- a/css/main.css
+++ b/css/main.css
@@ -30,9 +30,10 @@ body {
 }
 
 .container {
-	max-width: 1170px;
+	max-width: 1200px;
 
 	margin: 0 auto;
+	padding: 0 15px;
 }
 
 .section {
@@ -196,4 +197,16 @@ body {
 	color: #fff;
 
 	text-align: center;
+}
+
+/* Responsive */
+
+@media screen (max-width: 1200px) {
+
+}
+
+@media screen (max-width: 992px) {
+	.container {
+		max-width: 960px;
+	}
 }
